--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -23,7 +23,7 @@
           {
             "name": "Programme",
             "component": "schedule",
-            "enabled": "false",
+            "enabled": "true",
             "url": "/schedule"
           },
           {
@@ -391,6 +391,26 @@
           }
         ]
       },
+      "schedule": {
+        "herotitle": "Programme",
+        "days": [
+          {
+            "date": "27 Janvier 2025",
+            "location": "Balexert Genève",
+            "planning-pic": "/schedule_pics/27.01.25.png"
+          },
+          {
+            "date": "28 Janvier 2025",
+            "location": "Balexert Genève",
+            "planning-pic": "/schedule_pics/28.01.25.png"
+          },
+          {
+            "date": "29 Janvier 2025",
+            "location": "EHL Lausanne",
+            "planning-pic": "/schedule_pics/29.01.25.png"
+          }
+        ]
+      },
       "speakers": {
         "hero": {
           "title": "Nos Conférenciers Invités"
@@ -398,27 +418,27 @@
         "invitedSpeakers": {
           "sectionTitle": "Intervenants Invités",
           "speakers": [
-              {
-                "name": "Olivier Naef, HES-SO",
-                "bio": "Olivier Naef est responsable du domaine Ingénierie et Architecture de la HES-SO, comptant 6 hautes écoles, 19 filières Bachelor et 4 filières Master, pour environ 4'200 étudiantes et étudiants. Il est membre de la Conférence spécialisée des domaines techniques, architecture et Life Sciences (FTAL).",
-                "title": "L’intelligence artificielle : un enjeu sociétal et technologique",
-                "para": "",
-                "photo": "/speaker_pics/olivier-naef.jpg"
-              },
-              {
-                "name": "Jérôme Koller, La Mobilière",
-                "bio": "Jérôme Koller est responsable de la stratégie d'entreprise et du portefeuille de projets à La Mobilière et membre du comité directeur élargi. Il supervise la gestion stratégique et financière de l’organisation agile de la Mobilière, et conduit les efforts de transformation et de digitalisation de 1300 employés. Fortement engagé dans la création de valeur via l'IA, il a précédemment dirigé une équipe de 25 data scientists en tant que responsable des données et de l'analytique, où il a introduit l'IA jusqu'à l'interface client.",
-                "title": "La Mobilière ou La MobiliAIre ? L’IA démocratisée sans complexe.",
-                "para": "",
-                "photo": "/speaker_pics/jerome-koller.jpg"
-              },
-              {
-                "name": "Giorgio Pauletto, SIG",
-                "bio": "Giorgio Pauletto est Directeur prospective, stratégie et innovation aux Services Industriels de Genève (SIG), une entreprise publique autonome dans les énergies renouvelables et l’environnement. Il est docteur en économie, statistiques et méthodes quantitatives de l'Université de Genève et a été chercheur à Stanford et Yale.",
-                "title": "L'intelligence artificielle sauvera-t-elle la planète ou l'épuisera-t-elle ?",
-                "para": "L’intelligence artificielle ouvre des perspectives prometteuses pour optimiser notre consommation d’énergie et soutenir la transition écologique. Mais son propre impact environnemental, lié à une forte consommation de ressources, soulève des questions. Est-elle vraiment une solution durable ou va-t-elle devenir un nouveau fardeau pour notre planète ?",
-                "photo": "/speaker_pics/giorgio-pauletto.png"
-              },
+            {
+              "name": "Olivier Naef, HES-SO",
+              "bio": "Olivier Naef est responsable du domaine Ingénierie et Architecture de la HES-SO, comptant 6 hautes écoles, 19 filières Bachelor et 4 filières Master, pour environ 4'200 étudiantes et étudiants. Il est membre de la Conférence spécialisée des domaines techniques, architecture et Life Sciences (FTAL).",
+              "title": "L’intelligence artificielle : un enjeu sociétal et technologique",
+              "para": "",
+              "photo": "/speaker_pics/olivier-naef.jpg"
+            },
+            {
+              "name": "Jérôme Koller, La Mobilière",
+              "bio": "Jérôme Koller est responsable de la stratégie d'entreprise et du portefeuille de projets à La Mobilière et membre du comité directeur élargi. Il supervise la gestion stratégique et financière de l’organisation agile de la Mobilière, et conduit les efforts de transformation et de digitalisation de 1300 employés. Fortement engagé dans la création de valeur via l'IA, il a précédemment dirigé une équipe de 25 data scientists en tant que responsable des données et de l'analytique, où il a introduit l'IA jusqu'à l'interface client.",
+              "title": "La Mobilière ou La MobiliAIre ? L’IA démocratisée sans complexe.",
+              "para": "",
+              "photo": "/speaker_pics/jerome-koller.jpg"
+            },
+            {
+              "name": "Giorgio Pauletto, SIG",
+              "bio": "Giorgio Pauletto est Directeur prospective, stratégie et innovation aux Services Industriels de Genève (SIG), une entreprise publique autonome dans les énergies renouvelables et l’environnement. Il est docteur en économie, statistiques et méthodes quantitatives de l'Université de Genève et a été chercheur à Stanford et Yale.",
+              "title": "L'intelligence artificielle sauvera-t-elle la planète ou l'épuisera-t-elle ?",
+              "para": "L’intelligence artificielle ouvre des perspectives prometteuses pour optimiser notre consommation d’énergie et soutenir la transition écologique. Mais son propre impact environnemental, lié à une forte consommation de ressources, soulève des questions. Est-elle vraiment une solution durable ou va-t-elle devenir un nouveau fardeau pour notre planète ?",
+              "photo": "/speaker_pics/giorgio-pauletto.png"
+            },
             {
               "name": "Jan Kerschgens, Innovaud",
               "bio": "Jan Kerschgens est actuellement responsable de l’initiative d’intelligence artificielle pour le Canton de Vaud, basée à Innovaud. Auparavant, il a travaillé dans des centres de recherche de l’EPFL dédiés à l’intelligence artificielle et à la robotique, ainsi qu’au sein du Pôle de recherche national suisse en robotique et dans le secteur privé.",
@@ -426,13 +446,13 @@
               "para": "",
               "photo": "/speaker_pics/jan-kerschgens.jpg"
             },
-              {
-                "name": "Sandro Saitta, viadata",
-                "bio": "Sandro Saitta is passionate about helping companies become data-driven. He has worked across various industries to promote data usage and is currently a Data & AI advisor at viadata, a company specializing in executive advising and corporate training. He holds a Ph.D. in EPFL.",
-                "title": "AI for SME - How to get started and overcome key challenges?",
-                "para": "In today's digital landscape, Artificial Intelligence (AI) is a powerful tool for SMEs seeking innovation and growth. This presentation demystifies AI, cutting through the hype. By exploring fundamental concepts, we clarify what AI can and can't do. We’ll guide SMEs on how to initiate AI projects through both top-down and bottom-up approaches, using frameworks like the impact-feasibility matrix and the data initiative canvas. Additionally, we address key challenges in AI adoption, discussing various dimensions such as data quality, people skills, change management and offering actionable tips to overcome them.",
-                "photo": "/speaker_pics/sandro-saitta.png"
-              }
+            {
+              "name": "Sandro Saitta, viadata",
+              "bio": "Sandro Saitta is passionate about helping companies become data-driven. He has worked across various industries to promote data usage and is currently a Data & AI advisor at viadata, a company specializing in executive advising and corporate training. He holds a Ph.D. in EPFL.",
+              "title": "AI for SME - How to get started and overcome key challenges?",
+              "para": "In today's digital landscape, Artificial Intelligence (AI) is a powerful tool for SMEs seeking innovation and growth. This presentation demystifies AI, cutting through the hype. By exploring fundamental concepts, we clarify what AI can and can't do. We’ll guide SMEs on how to initiate AI projects through both top-down and bottom-up approaches, using frameworks like the impact-feasibility matrix and the data initiative canvas. Additionally, we address key challenges in AI adoption, discussing various dimensions such as data quality, people skills, change management and offering actionable tips to overcome them.",
+              "photo": "/speaker_pics/sandro-saitta.png"
+            }
           ]
         },
         "moderatorsAndPanelists": {
