--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -407,7 +407,7 @@
           {
             "date": "29th January 2025",
             "location": "EHL Lausanne",
-            "planning-pic": "/schedule_pics/29.01.25.png"
+            "planning-pic": "/schedule_pics/29.01.25.jpg"
           }
         ]
       },
