--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -45,7 +45,7 @@
             "url": "/partners"
           },
           {
-            "name": "Practical informations",
+            "name": "Venue & organisation",
             "component": "contact",
             "enabled": "true",
             "url": "/contact"
