--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -377,14 +377,14 @@
           },
           {
             "title": "Workshop 3b: Machine Learning Operations - MLOps",
-            "description": "In this workshop, participants will explore the data management aspects of the Retrieval-Augmented-Generation (RAG) framework as applied to Large Language Models. The primary objective is to convert a machine learning experiment provided in a Jupyter Notebook into a production-ready application by integrating a Data Version Control (DVC) pipeline for efficient data management. This workshop aims to provide participants with the technical skills needed to manage the data lifecycle of Machine Learning models, promote collaboration among teams, and automate operational processes.",
+            "description": "In this workshop, participants will explore the data management aspects as applied to Machine Learning models. The primary objective is to convert a machine learning experiment provided in a Jupyter Notebook into a production-ready application by integrating a Data Version Control (DVC) pipeline for efficient data management. This workshop aims to provide participants with the technical skills needed to manage the data lifecycle of Machine Learning models, promote collaboration among teams, and automate operational processes.",
             "schedule": {
               "time": "13h-16h",
               "equipment": "Personal laptop with WSL2 / Linux Ubuntu installed and ready to use."
             },
             "activities": [
               "Initial setup.",
-              "Exploration of the RAG experiment.",
+              "Exploration of the experiment.",
               "Transformation of the experiment to reproduce and evaluate the quality of the model.",
               "Effective collaboration to build a reliable and functional model over time."
             ],
