--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -377,14 +377,14 @@
           },
           {
             "title": "Workshop 3b : Machine Learning Operations - MLOps",
-            "description": "Dans ce Workshop, les participant·es exploreront les aspects de la gestion des données dans le cadre RAG (Generation Augmentée par la Recherche) appliqué aux grands modèles de langage (LLM). L'objectif principal est de transformer une expérience de Machine Learning fournie dans un Jupyter Notebook en une application adaptée pour la production en intégrant un pipeline DVC pour une gestion efficace des données. Cet atelier vise à fournir aux participant·es les compétences techniques nécessaires pour gérer le cycle de vie des données des modèles de Machine Learning, promouvoir la collaboration dans les équipes et automatiser les processus opérationnels.",
+            "description": "Dans ce Workshop, les participant·es exploreront les aspects de la gestion des données appliqués aux modèles de Machine Learning. L'objectif principal est de transformer une expérience de Machine Learning fournie dans un Jupyter Notebook en une application adaptée pour la production en intégrant un pipeline DVC pour une gestion efficace des données. Cet atelier vise à fournir aux participant·es les compétences techniques nécessaires pour gérer le cycle de vie des données des modèles de Machine Learning, promouvoir la collaboration dans les équipes et automatiser les processus opérationnels.",
             "schedule": {
               "time": "13h-16h",
               "equipment": "Ordinateur portable personnel avec WSL2 / Linux Ubuntu installé et prêt à l'emploi."
             },
             "activities": [
               "Préparation initiale.",
-              "Prise en main d'une expérience simple RAG de machine learning.",
+              "Prise en main d'une expérience simple de machine learning.",
               "Transformation de cette expérience pour reproduire et évaluer la qualité du modèle.",
               "Collaboration efficace pour développer un modèle fiable et fonctionnel."
             ],
