--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -462,7 +462,7 @@
             {
               "name": "Isabelle Hering",
               "position": "Avocate et médiatrice, Etude Hering, Nyon",
-              "bio": "Isabelle Hering est spécialisée dans les domaines du droit de l’informatique, de la propriété intellectuelle, du droit des affaires et de la protection des données. Elle est certifiée CIPP/E (RGPD) et fonctionne comme DPO externe pour plusieurs institutions publiques et entreprises privées.",
+              "bio": "Isabelle Hering is a founding partner of Etude Hering in Nyon. With a Master's degree in Business Law from the London School of Economics (LSE) and a Master's degree in International Dispute Resolution from the Geneva Graduate Institute of International and Development Studies (HEID), Isabelle specializes in IT law, intellectual property, business law and data protection. She is CIPP/E (RGPD) certified and works as external DPO for several public institutions and private companies. She gives numerous courses and lectures on the subject of data protection and mediation. In particular, in 2014 she and her partners at DPO Associates Sarl created a course aimed at future DPOs (“The Corporate Data Protection Officer”). She is also a CEDR (London) and FSA accredited mediator and works as an arbitrator. ",
               "photo": "/speaker_pics/isabelle-hering.png"
             },
             {
@@ -510,14 +510,14 @@
             {
               "name": "Delphine Seitiée",
               "position": "Alp ICT",
-              "bio": "",
-              "photo": "/speaker_pics/generic-profile.jpg"
+              "bio": "Delphine Seitiée, General Secretary of Alp ICT. \n\nalpict.ch promotes collaboration between SMEs and the digital sector. Delphine hosts the Alp ICT YouTube channel, showcasing digital entrepreneurs in French-speaking Switzerland. ",
+              "photo": "/speaker_pics/delphine-seitiee.png"
             },
             {
               "name": "Jean-Gabriel Piguet",
               "position": "Service d’éthique appliquée, HES-SO Valais-Wallis",
-              "bio": "",
-              "photo": "/speaker_pics/generic-profile.jpg"
+              "bio": "Jean-Gabriel Piguet first worked as a legislative advisor on health in the French Senate and as a professor of philosophy and political science in the Paris region and in the canton of Fribourg. Since 2018, he has been head of the Service d'Éthique Appliquée at the HES-SO Valais-Wallis and associate researcher in moral philosophy at the Institut Interdisciplinaire des Droits de l'Homme at the University of Fribourg. He is actively involved in training and research on digital and health ethics at both institutions.",
+              "photo": "/speaker_pics/jean-gabriel-piguet.png"
             },
             {
               "name": "Ewen Nedelec",
