--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -462,7 +462,7 @@
             {
               "name": "Isabelle Hering",
               "position": "Avocate et médiatrice, Etude Hering, Nyon",
-              "bio": "Isabelle Hering est spécialisée dans les domaines du droit de l’informatique, de la propriété intellectuelle, du droit des affaires et de la protection des données. Elle est certifiée CIPP/E (RGPD) et fonctionne comme DPO externe pour plusieurs institutions publiques et entreprises privées.",
+              "bio": "Isabelle Hering est associée fondatrice de l’Etude Hering à Nyon. Titulaire d’un master en droit des affaires délivré par la London School of Economics (LSE) et d’un master en résolution des litiges internationaux délivré par l’Institut des Hautes Etudes Internationales et du Développement de Genève (HEID), Isabelle est spécialisée dans les domaines du droit de l’informatique, de la propriété intellectuelle, du droit des affaires et de la protection des données. Elle est certifiée CIPP/E (RGPD) et fonctionne comme DPO externe pour plusieurs institutions publiques et entreprises privées. Elle donne de nombreux cours et conférences sur le sujet de la protection des données et de la médiation. Elle a notamment créé en 2014 avec ses associés de DPO Associates Sarl un cours destiné aux futurs DPOs (« le Responsable de la protection des données en entreprise »). Elle est également médiatrice accréditée CEDR (Londres) et FSA et fonctionne comme arbitre. ",
               "photo": "/speaker_pics/isabelle-hering.png"
             },
             {
@@ -510,14 +510,14 @@
             {
               "name": "Delphine Seitiée",
               "position": "Alp ICT",
-              "bio": "",
-              "photo": "/speaker_pics/generic-profile.jpg"
+              "bio": "Delphine Seitiée, Secrétaire générale d’Alp ICT. \nalpict.ch encourage la collaboration entre les PME et le secteur du numérique. Delphine anime notamment la chaîne YouTube d'Alp ICT, mettant en avant les entrepreneur.e.s du numérique en Suisse romande.",
+              "photo": "/speaker_pics/delphine-seitiee.png"
             },
             {
               "name": "Jean-Gabriel Piguet",
               "position": "Service d’éthique appliquée, HES-SO Valais-Wallis",
-              "bio": "",
-              "photo": "/speaker_pics/generic-profile.jpg"
+              "bio": "Jean-Gabriel Piguet a tout d'abord travaillé comme conseiller législatif en santé au Sénat français et comme professeur de philosophie et de sciences politiques en région parisienne et dans le canton de Fribourg. Il est responsable depuis 2018 du Service d'Éthique Appliquée de la HES-SO Valais-Wallis et chercheur associé en philosophie morale à l'Institut Interdisciplinaire des Droits de l'Homme de l'Université de Fribourg. Il participe activement dans ces deux établissements à la formation et à la recherche sur les thématiques de l'éthique du numérique et de la santé.",
+              "photo": "/speaker_pics/jean-gabriel-piguet.png"
             },
             {
               "name": "Ewen Nedelec",
