--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -531,7 +531,9 @@
         "terms": " HES-SO. All rights reserved.",
         "partner-1": "https://www.mobiliere.ch",
         "partner-2": "https://www.ehl.edu",
-        "partner-3": "https://www.hes-so.ch"
+        "partner-3": "https://www.hes-so.ch",
+        "partner-4": "https://heig-vd.ch",
+        "partner-5": "https://www.opi.ch/"
       }
     }
   ]
